--- a/traefik.yaml
+++ b/traefik.yaml
@@ -64,23 +64,25 @@ metadata:
 spec:
   entryPoints:
     - web
-    - websecure
   routes:
-    - match: Host(`example.net`) && PathPrefix(`/bar`)
+    - match: PathPrefix(`/bar`)
       kind: Rule
-      priority: 12
-      # defining several services is possible and allowed, but for now the servers of
-      # all the services (for a given route) get merged altogether under the same
-      # load-balancing strategy.
+      middlewares:
+      - name: dummy-whitelist
+        namespace: default
       services:
         - name: whoami
           port: 80
-  # use an empty tls object for TLS with Let's Encrypt
-  tls:
-    secretName: supersecret
-    options:
-      name: myTLSOption
-      namespace: default
+---
+apiVersion: traefik.containo.us/v1alpha1
+kind: Middleware
+metadata:
+  name: dummy-whitelist
+
+spec:
+  ipWhiteList:
+    sourceRange:
+      - 0.0.0.0/0
 ---
 kind: Deployment
 apiVersion: apps/v1
